--- a/SchoolDiarySystem/Views/MyKids/IndexTopic.cshtml
+++ b/SchoolDiarySystem/Views/MyKids/IndexTopic.cshtml
@@ -29,11 +29,14 @@
                         {
                             <form class="mg-b-20">
                                 <div class="row gutters-8">
-                                    <div class="col-lg-5 col-12 form-group">
-                                        <input type="text" autocomplete="off" placeholder="Search by Date ..." name="searchString" class="form-control air-datepicker">
+                                    <div class="col-lg-4 col-12 form-group">
+                                        <input type="date" autocomplete="off" placeholder="Search by date ..." name="searchString" class="form-control">
                                     </div>
-                                    <div class="col-lg-5 col-12 form-group">
-                                        <input type="text" autocomplete="off" placeholder="Search by Title ..." name="searchString2" class="form-control">
+                                    <div class="col-lg-3 col-12 form-group">
+                                        <input type="text" autocomplete="off" placeholder="Search by subject ..." name="searchString2" class="form-control">
+                                    </div>
+                                    <div class="col-lg-3 col-12 form-group">
+                                        <input type="text" autocomplete="off" placeholder="Search by student ..." name="searchString3" class="form-control">
                                     </div>
                                     <div class="col-lg-2 col-12 form-group">
                                         <button type="submit" class="fw-btn-fill btn-gradient-yellow">SEARCH</button>
