--- a/SchoolDiarySystem/Views/Topic/Index.cshtml
+++ b/SchoolDiarySystem/Views/Topic/Index.cshtml
@@ -16,7 +16,7 @@
                 <li>Topic</li>
             </ul>
         </div>
-        <div class="col-4-xxxl col-12">
+        <div class="col-4-xxxl col-12" style="padding:0; flex: 0 0 auto;">
             <div class="card height-auto">
                 <div class="card-body">
                     <div class="heading-layout1">
@@ -50,10 +50,10 @@
                             <form class="mg-b-20">
                                 <div class="row gutters-8">
                                     <div class="col-lg-5 col-12 form-group">
-                                        <input type="text" autocomplete="off" placeholder="Search by Date ..." name="searchString" class="form-control air-datepicker">
+                                        <input type="text" autocomplete="off" placeholder="Search by date ..." name="searchString" class="form-control air-datepicker">
                                     </div>
                                     <div class="col-lg-5 col-12 form-group">
-                                        <input type="text" autocomplete="off" placeholder="Search by Title ..." name="searchString2" class="form-control">
+                                        <input type="text" autocomplete="off" placeholder="Search by subject ..." name="searchString2" class="form-control">
                                     </div>
                                     <div class="col-lg-2 col-12 form-group">
                                         <button type="submit" class="fw-btn-fill btn-gradient-yellow">SEARCH</button>
