--- a/SchoolDiarySystem/Views/MyKids/IndexClass.cshtml
+++ b/SchoolDiarySystem/Views/MyKids/IndexClass.cshtml
@@ -30,6 +30,9 @@
                             <div class="col-4-xxxl col-xl-10 col-lg-3 col-12 form-group">
                                 <input type="number" autocomplete="off" name="searchString" placeholder="Search by class number ..." class="form-control">
                             </div>
+                            <div class="col-4-xxxl col-xl-10 col-lg-3 col-12 form-group">
+                                <input type="text" autocomplete="off" name="searchString2" placeholder="Search by student ..." class="form-control">
+                            </div>
                             <div class="col-1-xxxl col-xl-2 col-lg-3 col-12 form-group">
                                 <button type="submit" class="fw-btn-fill btn-gradient-yellow">SEARCH</button>
                             </div>
@@ -45,6 +48,7 @@
                                 <th>Teacher</th>
                                 <th>Class Number</th>
                                 <th>Room Type</th>
+                                <th></th>
                             </tr>
                         </thead>
                         <tbody>
@@ -63,6 +67,16 @@
                                     </td>
                                     <td>
                                         @Html.DisplayFor(m => item.Room.RoomType)
+                                    </td>
+                                    <td>
+                                        <div class="dropdown">
+                                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
+                                                <span class="flaticon-more-button-of-three-dots"></span>
+                                            </a>
+                                            <div class="dropdown-menu dropdown-menu-right">
+                                                <a class="dropdown-item" href="@Url.Action("TeacherDetails", "MyKids", new { id = item.TeacherID})"><i class="fas fa-cogs text-dark-pastel-green"></i>View Teache Details</a>
+                                            </div>
+                                        </div>
                                     </td>
                                 </tr>
                             }
