--- a/SchoolDiarySystem/Views/Review/Index.cshtml
+++ b/SchoolDiarySystem/Views/Review/Index.cshtml
@@ -30,10 +30,10 @@
                             <form class="mg-b-20">
                                 <div class="row gutters-8">
                                     <div class="col-lg-5 col-12 form-group">
-                                        <input type="tel"  autocomplete="off" name="searchString" placeholder="Search by Date ..." class="form-control air-datepicker">
+                                        <input type="tel"  autocomplete="off" name="searchString" placeholder="Search by date ..." class="form-control air-datepicker">
                                     </div>
                                     <div class="col-lg-5 col-12 form-group">
-                                        <input type="text"  autocomplete="off" name="searchString2" placeholder="Search by Subject ..." class="form-control">
+                                        <input type="text"  autocomplete="off" name="searchString2" placeholder="Search by subject ..." class="form-control">
                                     </div>
                                     <div class="col-lg-2 col-12 form-group">
                                         <button type="submit" class="fw-btn-fill btn-gradient-yellow">SEARCH</button>
