--- a/SchoolDiarySystem/Views/Shared/_LayoutParent.cshtml
+++ b/SchoolDiarySystem/Views/Shared/_LayoutParent.cshtml
@@ -173,9 +173,9 @@
     <!-- Full Calender Js -->
     <script src="~/Content/js/fullcalendar.min.js"></script>
     <!-- Select 2 Js -->
-    <script src="js/select2.min.js"></script>
+    <script src="~/Content/js/select2.min.js"></script>
     <!-- Date Picker Js -->
-    <script src="js/datepicker.min.js"></script>
+    <script src="~/Content/js/datepicker.min.js"></script>
     <!-- Chart Js -->
     <script src="~/Content/js/Chart.min.js"></script>
     <!-- Data Table Js -->
