--- a/SchoolDiarySystem/Views/Topic/Create.cshtml
+++ b/SchoolDiarySystem/Views/Topic/Create.cshtml
@@ -51,7 +51,7 @@
                             </div>
                             <div class="col-xl-6 col-lg-6 col-12 form-group">
                                 <label>Content *</label>
-                                @Html.TextAreaFor(m => m.Content, new { @class = "textarea form-control", placeholder = "Last name...", id = "content", autocomplete = "off", style = "margin-top: 0px; margin-bottom: 0px; height: 150px;" })
+                                @Html.TextAreaFor(m => m.Content, new { @class = "textarea form-control", placeholder = "Type here...", id = "content", autocomplete = "off", style = "margin-top: 0px; margin-bottom: 0px; height: 150px;" })
                                 @Html.ValidationMessageFor(m => m.Content, "", new { @class = "text-danger" })
                             </div>
                             <div class="col-12 form-group mg-t-8">
