--- a/SchoolDiarySystem/Views/Account/Login.cshtml
+++ b/SchoolDiarySystem/Views/Account/Login.cshtml
@@ -11,8 +11,8 @@
 
 <!-- Mirrored from www.radiustheme.com/demo/html/psdboss/akkhor/akkhor/login.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 20 Nov 2020 10:10:02 GMT -->
 <!-- Added by HTTrack -->
-<meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
 <head>
+    <meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>School Diary | Login</title>
@@ -50,12 +50,13 @@
                 {
                     <div class="item-logo">
                         <img src="~/Content/img/favicon.png" alt="logo">
+                        <img src="~/Content/img/SDMLogo.png" alt="logo">
                     </div>
                     <form class="login-form">
                         @Html.ValidationSummary(true, string.Empty, new { @class = "text-danger" })
                         <div class="form-group">
                             <label>Username</label>
-                            @Html.TextBoxFor(m => m.Username, new { @class = "form-control", placeholder = "Enter Username...", id = "username", autocomplete = "off" })
+                            @Html.TextBoxFor(m => m.Username, new { @class = "form-control", placeholder = "Username", id = "username", autocomplete = "off" })
                             @Html.ValidationMessageFor(m => m.Username, "", new { @class = "text-danger" })
                         </div>
                         <div class="form-group">
