--- a/SchoolDiarySystem/Views/Professor/Index.cshtml
+++ b/SchoolDiarySystem/Views/Professor/Index.cshtml
@@ -5,8 +5,6 @@
 @using SchoolDiarySystem.Models
 @model IEnumerable<Students>
 
-@*<div class="dashboard-page-one">*@
-    @*<div class="dashboard-content-one">*@
         <div class="breadcrumbs-area">
             <h3>Teacher Dashboard</h3>
             <ul>
@@ -99,7 +97,7 @@
                                 <form class="search-form-box">
                                     <div class="row gutters-8">
                                         <div class="col-4-xxxl col-xl-10 col-lg-4 col-12 form-group">
-                                            <input type="text" placeholder="Search by Name ..." name="searchString" class="form-control">
+                                            <input type="text" placeholder="Search by student's first or last name ..." name="searchString" class="form-control">
                                         </div>
                                         <div class="col-1-xxxl col-xl-2 col-lg-2 col-12 form-group">
                                             <button type="submit" class="fw-btn-fill btn-gradient-yellow">SEARCH</button>
@@ -165,7 +163,5 @@
                 </div>
             </div>
         </div>
-    @*</div>*@
-@*</div>*@
 
 @section Scripts {}
