--- a/SchoolDiarySystem/Views/Subject/Update.cshtml
+++ b/SchoolDiarySystem/Views/Subject/Update.cshtml
@@ -5,8 +5,6 @@
 @using SchoolDiarySystem.Models
 @model Subjects
 
-@*<div class="dashboard-page-one">*@
-    @*<div class="dashboard-content-one">*@
         <div class="breadcrumbs-area">
             <h3>Subject</h3>
             <ul>
@@ -31,12 +29,12 @@
                             @Html.HiddenFor(m => m.SubjectID)
                             <div class="col-xl-3 col-lg-6 col-12 form-group">
                                 <label>Book *</label>
-                                @Html.TextBoxFor(m => m.Book, new { @class = "form-control", placeholder = "Book...", id = "book", autocomplete = "off" })
+                                @Html.TextBoxFor(m => m.Book, new { @class = "form-control", placeholder = "Subject's Book", id = "book", autocomplete = "off" })
                                 @Html.ValidationMessageFor(m => m.Book, "", new { @class = "text-danger" })
                             </div>
                             <div class="col-xl-3 col-lg-6 col-12 form-group">
                                 <label>Book Author *</label>
-                                @Html.TextBoxFor(m => m.BookAuthor, new { @class = "form-control", placeholder = "BookAuthor...", id = "bookauthor", autocomplete = "off" })
+                                @Html.TextBoxFor(m => m.BookAuthor, new { @class = "form-control", placeholder = "Book Author", id = "bookauthor", autocomplete = "off" })
                                 @Html.ValidationMessageFor(m => m.BookAuthor, "", new { @class = "text-danger" })
                             </div>
                             <div class="col-xl-3 col-lg-6 col-12 form-group">
@@ -52,7 +50,5 @@
                 }
             </div>
         </div>
-    @*</div>*@
-@*</div>*@
 
 @section Scripts {}
