--- a/SchoolDiarySystem/Views/Teacher/Index.cshtml
+++ b/SchoolDiarySystem/Views/Teacher/Index.cshtml
@@ -5,8 +5,6 @@
 @using SchoolDiarySystem.Models
 @model IEnumerable<Teachers>
 
-@*<div class="dashboard-page-one" style="height: 100%; width: 100%; position:fixed;">
-    <div class="dashboard-content-one">*@
 <div class="breadcrumbs-area">
     <h3>Teacher</h3>
     <ul>
@@ -48,7 +46,7 @@
             <form class="mg-b-20">
                 <div class="row gutters-8">
                     <div class="col-4-xxxl col-xl-10 col-lg-3 col-12 form-group">
-                        <input type="text" autocomplete="off" placeholder="Search by Name ..." name="searchString" class="form-control">
+                        <input type="text" autocomplete="off" placeholder="Search by teacher's first or last name..." name="searchString" class="form-control">
                     </div>
                     <div class="col-1-xxxl col-xl-2 col-lg-3 col-12 form-group">
                         <button type="submit" class="fw-btn-fill btn-gradient-yellow">SEARCH</button>
@@ -120,7 +118,6 @@
                                         </a>
                                         <div class="dropdown-menu dropdown-menu-right">
                                             <a class="dropdown-item" data-toggle="modal" data-target="#standard-modal"><i class="fas fa-times text-orange-red"></i>Delete</a>
-                                            @*<a class="dropdown-item" href="@Url.Action("Delete", "Teacher", new { id = item.TeacherID })"><i class="fas fa-times text-orange-red"></i>Delete</a>*@
                                             <a class="dropdown-item" href="@Url.Action("Update", "Teacher", new { id = item.TeacherID })"><i class="fas fa-cogs text-dark-pastel-green"></i>Update</a>
                                             <a class="dropdown-item" href="@Url.Action("Details", "Teacher", new { id = item.TeacherID })"><i class="fas fa-redo-alt text-orange-peel"></i>Details</a>
                                         </div>
@@ -159,7 +156,5 @@
         </div>
     </div>
 </div>
-@*</div>
-    </div>*@
 
 @section Scripts {}
