--- a/SchoolDiarySystem/Views/User/Update.cshtml
+++ b/SchoolDiarySystem/Views/User/Update.cshtml
@@ -6,8 +6,6 @@
 @using SchoolDiarySystem.Models
 @model Users
 
-@*<div class="dashboard-page-one">*@
-    @*<div class="dashboard-content-one">*@
         <div class="breadcrumbs-area">
             <h3>Update</h3>
             <ul>
@@ -34,12 +32,12 @@
                                 <div class="col-xl-4 col-lg-6 col-12 form-group">
                                     @Html.HiddenFor(m => m.UserID)
                                     <label>First Name *</label>
-                                    @Html.TextBoxFor(m => m.FirstName, new { @class = "form-control", placeholder = "First name...", id = "firstname", autocomplete = "off" })
+                                    @Html.TextBoxFor(m => m.FirstName, new { @class = "form-control", placeholder = "First Name", id = "firstname", autocomplete = "off" })
                                     @Html.ValidationMessageFor(m => m.FirstName, "", new { @class = "text-danger" })
                                 </div>
                                 <div class="col-xl-4 col-lg-6 col-12 form-group">
                                     <label>Last Name *</label>
-                                    @Html.TextBoxFor(m => m.LastName, new { @class = "form-control", placeholder = "Last name...", id = "lastname", autocomplete = "off" })
+                                    @Html.TextBoxFor(m => m.LastName, new { @class = "form-control", placeholder = "Last Name", id = "lastname", autocomplete = "off" })
                                     @Html.ValidationMessageFor(m => m.LastName, "", new { @class = "text-danger" })
                                 </div>
                             }
@@ -69,7 +67,7 @@
                             </div>
                             <div class="col-xl-4 col-lg-4 col-12 form-group">
                                 <label>Username *</label>
-                                @Html.TextBoxFor(m => m.Username, new { @class = "form-control", placeholder = "Last name...", id = "username", autocomplete = "off" })
+                                @Html.TextBoxFor(m => m.Username, new { @class = "form-control", placeholder = "Username", id = "username", autocomplete = "off" })
                                 @Html.ValidationMessageFor(m => m.Username, "", new { @class = "text-danger" })
                             </div>
                             <div class="col-12 form-group mg-t-8">
@@ -80,7 +78,5 @@
                 }
             </div>
         </div>
-    @*</div>*@
-@*</div>*@
 
 @section Scripts {}
